<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo"
        android:layout_marginTop="20dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:text="@string/AUD_label"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="@dimen/main_text_size" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:id="@+id/value" android:textSize="@dimen/main_text_size"
            android:inputType="numberDecimal"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/edit_text_bckg"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:lines="1"
            android:minWidth="200dp" />



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center">


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent" android:background="@color/shadow_green"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_centerInParent="true">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:background="@drawable/bckg_currencies_top"
                    android:layout_height="5dp"
                    android:gravity="center"></LinearLayout>

                <android.support.v4.view.ViewPager
                    android:id="@+id/viewpager"
                    android:layout_width="match_parent"
                    android:layout_height="80dp">
                </android.support.v4.view.ViewPager>


                <LinearLayout android:background="@drawable/bckg_currencies_bottom"
                    android:layout_width="match_parent"
                    android:layout_height="5dp" ></LinearLayout>

            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:src="@drawable/indicator1"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView2"
                android:src="@drawable/indicator2"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/result"
            android:text=""
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="@dimen/main_text_size"
            android:layout_marginTop="20dp" />

    </LinearLayout>

</RelativeLayout>
